--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			</div>
 			<ul class="nav-list">
 				<li class="nav-item">Need</li>
+				<li class="nav-item">About</li>
 				<li class="nav-item circle">Donate</li>
 			</ul>
 		</nav>
