--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="layout" class="d-flex w-100 h-100 mx-auto flex-column">
 
 
-		<nav class="navbar navbar-expand-lg navbar-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark mt-2">
 			<div class="container">
 
 				<a class="navbar-brand" href="#">
@@ -53,7 +53,7 @@
 							</a>
 						</li>
 					</ul>
-					<a class="btn rounded-pill px-4 ml-lg-4 text-white" style="background-color: rgba(0, 151, 255, 1) !important;">
+					<a class="btn rounded-pill px-4 ml-lg-4 text-white" style="background-color: rgba(0, 180, 255, 1) !important;">
 						Donate
 					</a>
 				</div>
@@ -105,13 +105,13 @@
 							</a>
 						</div>
 						<div class="col">
-							<h6>Masks</h6>
+							<h6>Gloves</h6>
 							<a class="d-block rounded-lg lift lift-lg">
 								<img class="img-fluid rounded-lg" src="https://www.dw.com/image/52796439_303.jpg">
 							</a>
 						</div>
 						<div class="col">
-							<h6>Masks</h6>
+							<h6>Food</h6>
 							<a class="d-block rounded-lg lift lift-lg">
 								<img class="img-fluid rounded-lg"
 									src="https://cdn.cnn.com/cnnnext/dam/assets/200403033822-coronavirus-masks-0401-super-tease.jpg">
