--- a/login.html
+++ b/login.html
@@ -19,47 +19,53 @@
 
 <body>
 
-    <div id="layout" class="d-flex w-100 h-100 mx-auto flex-column">
+    <div id="layout" class="d-flex w-100 h-100">
+        <div class="row justify-content-center align-self-center mx-auto">
         <div class="container">
-            <div class="row justify-content-center py-5 text-white">
-                <div class="col-lg-8">
-                    <div class="text-center mb-10">
+                <div class="col mx-auto">
+                    <div class="row justify-content-center py-5 text-white">
+                        <div class="col-lg-8">
+                            <div class="text-center mb-10">
 
-                        <div class="navbar-brand">
-                            <img src="images/mask.png" height="55" class="d-inline-block align-top" alt="">
-        
-                            <p class="brand">corona donor</p>
-                        </div>
-                        <p class="text-light">
-                            This website can point you in the right direction of where to donate.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-lg-6 text-white">
-                    <h1 class="page-header-title">HELP THE HEROS</h1>
-                    <p class="page-header-text">A place where individuals and buisnesses can make a difference! This service will find hospitals in need near you. It will give you a phone number and address of where to send supplies.</p>
-                </div>
-                <div class="col-lg-6">
-                    <div class="card rounded-mg my-3">
-                        <div class="card-header">
-                            For Donors
-                        </div>
-                        <div class="card-body">
-                            <button class="btn bg-primary btn-block rounded-pill mt-4">Go</button>
+                                <div class="navbar-brand">
+                                    <img src="images/mask.png" height="55" class="d-inline-block align-top" alt="">
+
+                                    <p class="brand">corona donor</p>
+                                </div>
+                                <p class="text-light">
+                                    This website can point you in the right direction of where to donate.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card rounded-mg my-3">
-                        <div class="card-header">
-                            For Hospitals
+                    <div class="row align-items-center align-self-center">
+                        <div class="col-lg-6 text-white">
+                            <h1 class="page-header-title">HELP THE HEROS</h1>
+                            <p class="page-header-text">
+                                Healthcare workers are front line A place where individuals and buisnesses can make a
+                                difference! This service will find hospitals in need near you. It will give you a phone
+                                number and address of where to send supplies.
+                            </p>
                         </div>
-                        <div class="card-body">
-                            <button class="btn bg-primary btn-block rounded-pill mt-4">Go</button>
+                        <div class="col-lg-6">
+                            <div class="card rounded-mg my-3 opacity-60">
+                                <div class="card-header">
+                                    For Donors
+                                </div>
+                                <div class="card-body">
+                                    <button class="btn bg-primary btn-block rounded-pill mt-4 text-white">Go</button>
+                                </div>
+                            </div>
+                            <div class="card rounded-mg my-3 opacity-60">
+                                <div class="card-header">
+                                    For Hospitals
+                                </div>
+                                <div class="card-body">
+                                    <button class="btn bg-primary btn-block rounded-pill mt-4 text-white">Go</button>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <!-- <div class="col">
+                        <!-- <div class="col">
                     <div class="d-block rounded-mg opacity-60 p-5 ">
                         <h3>For Donors</h3>
                         <p class="mb-5">A place where individuals and buisnesses can make a difference</p>
@@ -77,7 +83,9 @@
                         </a>
                     </div>
                 </div> -->
-               
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
