--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 
 	<title>Hello, world!</title>
@@ -41,7 +40,7 @@
 					</svg></button>
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ml-auto mr-lg-5">
+					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">
 								Home
@@ -53,7 +52,8 @@
 							</a>
 						</li>
 					</ul>
-					<a class="btn rounded-pill px-4 ml-lg-4 text-white" style="background-color: rgba(0, 180, 255, 1) !important;">
+					<a class="btn rounded-pill px-4 ml-lg-4 text-white"
+						style="background-color: rgba(0, 180, 255, 1) !important;">
 						Donate
 					</a>
 				</div>
@@ -62,7 +62,7 @@
 		<main role="main" class="inner cover">
 			<header class="py-10">
 				<div class="container">
-					<div class="row justify-content-center">
+					<div class="row justify-content-center text-center">
 						<div class="bg-white mb-10 p-2 rounded-lg">
 							<h2>Stats in <span id="location">...</span></h2>
 							Confirmed: <span id="stats-1">...</span> <br>
@@ -134,12 +134,45 @@
 						<div class="col-lg-8">
 							<div class="text-center mb-10">
 
-								<h2>Reduce the curve</h2>
+								<h2>Hospitals near you</h2>
 								<p class="text-secondary">
-									By donating, you provide safety for medical workers.
+									We have found <span id="numHospitals">0</span> hospitals near you.
 								</p>
 							</div>
 						</div>
+					</div>
+					<div class="row text-center" id="nearHospitals">
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<div class="well rounded-mg lift p-4 m-4">
+								<div class="row">
+									<div class="col-8">
+										<div class="text-left">
+											<h4>Name of hospital</h4>
+											<small>
+												<span>location <i class="fa fa-map-marker"></i></span>
+											</small>
+											<span>website</span><br>
+											<span>phone number</span>
+										</div>
+									</div>
+									<div class="col">
+
+										<div class="profile-header-container">
+											<div class="profile-header-img">
+												<img class="img-circle rounded-circle shadow"
+													src="https://maps.googleapis.com/maps/api/staticmap?center=Berkeley,CA&zoom=14&size=400x400&key=AIzaSyCApByxb6XFxjlNNLplNphviJqnSggA8xI">
+												<div class="rank-label-container">
+													<span class="label label-default rank-label bg-light">0 beds</span>
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+							</div>
+
+						</div>
+
 					</div>
 				</div>
 				<!-- <div class="row justify-content-center py-5">
