--- a/index.html
+++ b/index.html
@@ -136,43 +136,13 @@
 
 								<h2>Hospitals near you</h2>
 								<p class="text-secondary">
-									We have found <span id="numHospitals">0</span> hospitals near you.
+									We found <span id="numHospitals">0</span> hospitals near you.
 								</p>
 							</div>
 						</div>
 					</div>
 					<div class="row text-center" id="nearHospitals">
-						<div class="col-xs-12 col-sm-6 col-md-6">
-							<div class="well rounded-mg lift p-4 m-4">
-								<div class="row">
-									<div class="col-8">
-										<div class="text-left">
-											<h4>Name of hospital</h4>
-											<small>
-												<span>location <i class="fa fa-map-marker"></i></span>
-											</small>
-											<span>website</span><br>
-											<span>phone number</span>
-										</div>
-									</div>
-									<div class="col">
-
-										<div class="profile-header-container">
-											<div class="profile-header-img">
-												<img class="img-circle rounded-circle shadow"
-													src="https://maps.googleapis.com/maps/api/staticmap?center=Berkeley,CA&zoom=14&size=400x400&key=AIzaSyCApByxb6XFxjlNNLplNphviJqnSggA8xI">
-												<div class="rank-label-container">
-													<span class="label label-default rank-label bg-light">0 beds</span>
-												</div>
-											</div>
-										</div>
-									</div>
-
-								</div>
-							</div>
-
-						</div>
-
+						
 					</div>
 				</div>
 				<!-- <div class="row justify-content-center py-5">
