--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="layout" class="d-flex w-100 h-100 mx-auto flex-column">
 
 
-		<nav class="navbar navbar-expand-lg navbar-dark mt-2">
+		<nav class="navbar navbar-expand-lg navbar-dark mt-2 t-0">
 			<div class="container">
 
 				<a class="navbar-brand" href="#">
