--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                             </p>
                         </div>
                         <div class="col-lg-6">
-                            <div class="card rounded-mg my-3 opacity-60">
+                            <div class="card my-3 opacity-60">
                                 <div class="card-header">
                                     For Donors
                                 </div>
@@ -56,7 +56,7 @@
                                     <button class="btn bg-primary btn-block rounded-pill mt-4 text-white">Go</button>
                                 </div>
                             </div>
-                            <div class="card rounded-mg my-3 opacity-60">
+                            <div class="card my-3 opacity-60">
                                 <div class="card-header">
                                     For Hospitals
                                 </div>
