--- a/index.html
+++ b/index.html
@@ -14,56 +14,68 @@
 	<link rel="stylesheet" href="css/stylesheet.css">
 
 	<title>Hello, world!</title>
+
+	<style>
+		#layout {
+			background: rgb(0, 151, 255);
+			background: linear-gradient(45deg,
+					rgba(0, 151, 255, 1) 0%,
+					rgba(8, 207, 164, 1) 100%);
+			padding: 0;
+			margin: 0;
+		}
+	</style>
 </head>
 
 <body>
 
-	<div id="layout" class="d-flex w-100 h-100 mx-auto flex-column">
+    <div id="layout" class="d-flex w-100 h-100 mx-auto flex-column">
 
 
-		<nav class="navbar navbar-expand-lg navbar-dark mt-2 t-0">
-			<div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark mt-2 t-0">
+            <div class="container">
 
-				<a class="navbar-brand" href="#">
-					<img src="images/mask.png" height="30" class="d-inline-block align-top" alt="">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/mask.png" height="30" class="d-inline-block align-top" alt="">
 
-					corona donor
-				</a>
-				<button class="navbar-toggler" style="outline:none !important;" type="button" data-toggle="collapse"
-					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-						viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
-						stroke-linejoin="round" class="feather feather-menu">
-						<line x1="3" y1="12" x2="21" y2="12"></line>
-						<line x1="3" y1="6" x2="21" y2="6"></line>
-						<line x1="3" y1="18" x2="21" y2="18"></line>
-					</svg></button>
+                    corona donor
+                </a>
+                <button class="navbar-toggler" style="outline:none !important;" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" class="feather feather-menu">
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg></button>
 
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">
-								Home
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">
-								Terms
-							</a>
-						</li>
-					</ul>
-					<a class="btn rounded-pill px-4 ml-lg-4 text-white"
-						style="background-color: rgba(0, 180, 255, 1) !important;">
-						Donate
-					</a>
-				</div>
-		</nav>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">
+                                Terms
+                            </a>
+                        </li>
+                    </ul>
+                    <a class="btn rounded-pill px-4 ml-lg-4 text-white text-wide"
+                        style="background-color: rgba(0, 180, 255, 1) !important;">
+                        Donate
+                    </a>
+                </div>
+            </div>
+        </nav>
 
 		<main role="main" class="inner cover">
 			<header class="py-10">
 				<div class="container">
 					<div class="row justify-content-center text-center">
-						<div class="bg-white mb-10 p-2 rounded-lg">
+						<div class="bg-white mb-10 p-2 rounded-lg w-25">
 							<h2>Stats in <span id="location">...</span></h2>
 							Confirmed: <span id="stats-1">...</span> <br>
 							Deaths: <span id="stats-2">...</span> <br>
@@ -89,9 +101,9 @@
 						<div class="col-lg-8">
 							<div class="text-center mb-10">
 
-								<h2>Hospitals Need Suplies</h2>
+								<h2>Hospitals Need Supplies</h2>
 								<p class="text-secondary">
-									This website can point you in the right direction of where to donate.
+									This website can point you in the right direction of where to donate
 								</p>
 							</div>
 						</div>
@@ -99,14 +111,14 @@
 					<div class="row text-center">
 						<div class="col">
 							<h6>Masks</h6>
-							<a class="d-block rounded-lg lift lift-lg">
+							<a class="d-block rounded-lg lift lift-lg" href="masks.html">
 								<img class="img-fluid rounded-lg"
 									src="https://cdn.cnn.com/cnnnext/dam/assets/200403033822-coronavirus-masks-0401-super-tease.jpg">
 							</a>
 						</div>
 						<div class="col">
 							<h6>Gloves</h6>
-							<a class="d-block rounded-lg lift lift-lg">
+							<a class="d-block rounded-lg lift lift-lg" href="gloves.html">
 								<img class="img-fluid rounded-lg" src="https://www.dw.com/image/52796439_303.jpg">
 							</a>
 						</div>
@@ -136,13 +148,13 @@
 
 								<h2>Hospitals near you</h2>
 								<p class="text-secondary">
-									We found <span id="numHospitals">0</span> hospitals near you.
+									We found <span id="numHospitals">0</span> hospitals
 								</p>
 							</div>
 						</div>
 					</div>
 					<div class="row text-center" id="nearHospitals">
-						
+
 					</div>
 				</div>
 				<!-- <div class="row justify-content-center py-5">
@@ -188,7 +200,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
 	<script src="data.js"></script>
-	<script src="charts.js"></script>
+	<!-- <script src="charts.js"></script> -->
 
 </body>
 
